	* add flags()/set_flags()/unset_flags() to torrent_handle, deprecate individual functions
	* added alert for block being sent to the send buffer
	* drop support for windows compilers without std::wstring
	* implemented support for DHT infohash indexing, BEP51
	* removed deprecated support for file_base in file_storage
	* added support for running separate DHT nodes on each network interface
	* added support for establishing UTP connections on any network interface
	* added support for sending tracker announces on every network interface
	* introduce "lt" namespace alias
	* need_save_resume_data() will no longer return true every 15 minutes
	* make the file_status interface explicitly public types
	* added resolver_cache_timeout setting for internal host name resolver
	* make parse_magnet_uri take a string_view instead of std::string
	* deprecate add_torrent_params::url field. use parse_magnet_uri instead
	* optimize download queue management
	* deprecated (undocumented) file:// urls
	* add limit for number of web seed connections
	* added support for retrieval of DHT live nodes
	* complete UNC path support
	* add packets pool allocator
	* remove disk buffer pool allocator
	* fix last_upload and last_download overflow after 9 hours in past
	* python binding add more add_torrent_params fields and an invalid key check
	* introduce introduce distinct types for peer_class_t, piece_index_t and
	  file_index_t.
	* fix crash caused by empty bitfield
	* removed disk-access-log build configuration
	* removed mmap_cache feature
	* strengthened type safety in handling of piece and file indices
	* deprecate identify_client() and fingerprint type
	* make sequence number for mutable DHT items backed by std::int64_t
	* tweaked storage_interface to have stronger type safety
	* deprecate relative times in torrent_status, replaced by std::chrono::time_point
	* refactor in alert types to use more const fields and more clear API