@@ -1130,6 +1130,13 @@ namespace {
 		s->alerts().set_notify_function(fun);
 	}
 
+	dropped_alerts_t session_handle::dropped_alerts()
+	{
+		std::shared_ptr<session_impl> s = m_impl.lock();
+		if (!s) aux::throw_ex<system_error>(errors::invalid_session_handle);
+		return s->alerts().dropped_alerts();
+	}
+
 #ifndef TORRENT_NO_DEPRECATE
 	void session_handle::set_severity_level(alert::severity_t s)
 	{
